@@ -193,6 +193,7 @@ Version 1.5
  - Issue #1259 - wrong manufacturer DOMUX in XML from michapr (Nechry)
  - Add Zipato Bulb 2 (Nechry)
  - Add Zipato rebranded devices from Heiman (Nechry)
+ - Add Domux rebranded devices from Heiman (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
